docs():更新文档,完善响应返回提示
