# controller/didController/apis.go
@@ -10,6 +10,7 @@ import (
 // CreateSoftwareIdentityApi @Summary 颁发did标识
 // @Accept       json
 // @Produce      json
+// @Tags         did身份标识管理
 // @Param   name body string true "软件名称"
 // @Description 通过传入软件包名称后台自动生成一个did标识符，并生成与其对应的did文档
 // @Success 200 {object} requestBase.ResponseBodyData "成功"
@@ -42,6 +43,7 @@ func CreateSoftwareIdentityApi(c *gin.Context) {
 // UpdateSoftwareIdentityApi @Summary 更新did文档
 // @Accept       json
 // @Produce      json
+// @Tags         did身份标识管理
 // @Description 通过传入结构体body数据来更新标识信息，注意这个结构体仅仅只是Document这一部分哦，这只是整个标识数据模型中的一部分，切记不要传入整个标识！！！
 // @Param   body body model.DidDocument true "新的did文档"
 // @Success 200 {object} requestBase.ResponseBodyData "成功"
@@ -67,6 +69,7 @@ func UpdateSoftwareIdentityApi(c *gin.Context) {
 // QuerySoftwareIdentityApi  @Summary 查询did文档
 // @Accept       json
 // @Produce      json
+// @Tags         did身份标识管理
 // @Description 通过didID来查询软件标识，传入指定的didID可以查询到该指定的文档，想要获取链上全部标识时，参数填“all”会返回所有标识。
 // @Param did query string true "查询单个标识时传入该文档指定的didID，想要获取全部标识时，就直接传入参数“all”。 "
 // @Success 200 {object} requestBase.ResponseBodyData "成功"
@@ -103,6 +106,7 @@ func QuerySoftwareIdentityApi(c *gin.Context) {
 // RemoveSoftwareIdentityApi  @Summary 吊销did文档
 // @Accept       multipart/form-data
 // @Produce      json
+// @Tags         did身份标识管理
 // @Description 通过表单数据来删除标识信息，注意是表单数据哦！！！
 // @Param   didID formData string true "didID"
 // @Success 200 {object} requestBase.ResponseBodyData "成功"
