# docs/swagger.yaml
@@ -1,4 +1,16 @@
 definitions:
+  fileUploadController.UploadResult:
+    properties:
+      fileName:
+        description: 存储的文件名
+        type: string
+      fileSize:
+        description: 文件大小(字节)
+        type: integer
+      publicURL:
+        description: 公开访问地址
+        type: string
+    type: object
   model.Authentication:
     properties:
       created:
@@ -67,12 +79,32 @@ definitions:
   requestBase.ResponseBodyData:
     properties:
       code:
+        description: 返回的状态码
         type: integer
       data:
         additionalProperties: {}
+        description: 返回数据
         type: object
       msg:
+        description: 返回的具体信息
         example: 成功
+        type: string
+    type: object
+  sbomController.GenerateSBOMRequest:
+    properties:
+      file_url:
+        type: string
+      format:
+        enum:
+        - spdx-json
+        - cyclonedx-json
+        - syft-json
+        type: string
+    type: object
+  sbomController.GenerateSbomResult:
+    properties:
+      download_url:
+        description: 下载地址
         type: string
     type: object
 info:
@@ -96,6 +128,8 @@ paths:
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
       summary: 用户信息
+      tags:
+      - 用户管理
   /api/v1/account/login:
     post:
       consumes:
@@ -115,6 +149,8 @@ paths:
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
       summary: 用户登陆
+      tags:
+      - 用户管理
   /api/v1/account/register:
     post:
       consumes:
@@ -134,6 +170,8 @@ paths:
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
       summary: 用户注册
+      tags:
+      - 用户管理
   /api/v1/did/create_identity:
     post:
       consumes:
@@ -153,6 +191,8 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
+      tags:
+      - did身份标识管理
   /api/v1/did/query_identity:
     get:
       consumes:
@@ -171,6 +211,8 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
+      tags:
+      - did身份标识管理
   /api/v1/did/remove_identity:
     delete:
       consumes:
@@ -189,6 +231,8 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
+      tags:
+      - did身份标识管理
   /api/v1/did/update_identity:
     put:
       consumes:
@@ -208,6 +252,51 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/requestBase.ResponseBodyData'
+      tags:
+      - did身份标识管理
+  /api/v1/file/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      description: 上传软件包压缩包到服务器并返回访问地址,支持.zip和.tar.gz格式压缩包,格式采用multipart/form-data,字段为file
+      parameters:
+      - description: 选择要上传的文件
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 上传成功
+          schema:
+            $ref: '#/definitions/fileUploadController.UploadResult'
+      summary: 上传文件
+      tags:
+      - 文件管理
+  /api/v1/sbom/generate:
+    post:
+      consumes:
+      - application/json
+      description: 根据已上传的软件包生成SBOM文件
+      parameters:
+      - description: 生成参数
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/sbomController.GenerateSBOMRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: SBOM清单信息
+          schema:
+            $ref: '#/definitions/sbomController.GenerateSbomResult'
+      summary: 生成SBOM接口
+      tags:
+      - SBOM管理
   /api/v1/service/checkSoft:
     post:
       consumes:
